[package]
name = "data_sample"
version = "0.1.0"
authors = ["Thiago Veronezi <thiago@veronezi.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
serde = { version = "1.0", features = ["derive"] }